added express error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,3 +101,13 @@ footer > div {
     background-color: rgb(255, 66, 66) !important;
     border-color: white !important;
 }
+
+
+.update-btn{
+     background-color: rgb(255, 66, 66) !important;
+    border-color: white !important;
+}
+.edit-btn{
+     background-color: rgb(255, 66, 66) !important;
+    border-color: white !important;
+}
