--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -1,14 +1,21 @@
 <% layout('/layouts/boilerplate.ejs') -%>
+
 <body>
-    <h1><%=hotel_data.title%></h1>
-    <div>
-        <p><%=hotel_data.description%></p>
-        <h2>₹<%=hotel_data.price%></h2>
-        <br>
-        <hr>
-        <h3>Location: <%=hotel_data.location%> ,<%=hotel_data.country%></h3>
-        
+    <div class="container mt-5 d-flex justify-content-center">
+        <div class="card text-center" style="width: 18rem;">
+            <img src="<%= hotel_data.image %>" class="card-img-top" alt="image_not_found">
+            <div class="card-body">
+                <p class="card-text"><%= hotel_data.description %></p>
+                <h2>₹<%= hotel_data.price %></h2>
+                <h4 class="text-muted">Location: <%= hotel_data.location %>, <%= hotel_data.country %></h4>
+                
+                <div class="d-flex justify-content-around mt-4">
+                    <a href="/index/<%= hotel_data._id %>/edit" class="btn btn-primary edit-btn row-2">Edit</a>
+                    <form method="POST" action="/index/<%= hotel_data._id %>?_method=DELETE">
+                        <button type="submit" class="btn btn-dark">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <a href="/index/<%=hotel_data._id%>/edit">edit</a>
-    <form method="post" action="/index/<%=hotel_data._id%>?_method=DELETE"><button>Delete</button></form>
 </body>
