--- a/views/new_hotel_form.ejs
+++ b/views/new_hotel_form.ejs
@@ -1,37 +1,46 @@
 <% layout('/layouts/boilerplate.ejs') -%>
 
-<body>
-    <div class="container mt-5">
-        <h1>New Entries</h1>
-        <div class="form-section">
-            <form method="POST" action="/index">
-                <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input type="text" name="title" id="title" class="form-control" placeholder="Enter title">
-                </div>
+    <body>
+        <div class="container mt-5">
+            <h1>New Entries</h1>
+            <div class="form-section">
+                <form method="POST" action="/index" novalidate class=" needs-validation">
+                    <div class="mb-3">
+                        <label for="title" class="form-label">Title</label>
+                        <input type="text" name="title" id="title" class="form-control" placeholder="Enter title"
+                            required>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
-                    <textarea name="description" id="description" class="form-control" placeholder="Enter description"></textarea>
-                </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Description</label>
+                        <textarea name="description" id="description" class="form-control"
+                            placeholder="Enter description" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="image" class="form-label">Image URL</label>
+                        <input type="text" name="image" id="image" class="form-control">
+                    </div>
 
-                <div class="mb-3">
-                    <label for="price" class="form-label">Price</label>
-                    <input type="number" name="price" id="price" class="form-control" placeholder="Enter price">
-                </div>
+                    <div class="mb-3">
+                        <label for="price" class="form-label">Price</label>
+                        <input  name="price" id="price" class="form-control" placeholder="Enter price"
+                            required>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="location" class="form-label">Location</label>
-                    <input type="text" name="location" id="location" class="form-control" placeholder="Enter location">
-                </div>
+                    <div class="mb-3">
+                        <label for="location" class="form-label">Location</label>
+                        <input type="text" name="location" id="location" class="form-control"
+                            placeholder="Enter location" required>
+                    </div>
 
-                <div class="mb-3">
-                    <label for="country" class="form-label">Country</label>
-                    <input type="text" name="country" id="country" class="form-control" placeholder="Enter country">
-                </div>
+                    <div class="mb-3">
+                        <label for="country" class="form-label">Country</label>
+                        <input type="text" name="country" id="country" class="form-control" placeholder="Enter country"
+                            required>
+                    </div>
 
-                <button type="submit" class="btn btn-primary add-btn">Add</button>
-            </form>
+                    <button type="submit" class="btn btn-primary add-btn">Add</button>
+                </form>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
