--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -1,21 +1,49 @@
 <% layout('/layouts/boilerplate.ejs') -%>
 
 <body>
-    <div class="container mt-5 d-flex justify-content-center">
-        <div class="card text-center" style="width: 18rem;">
-            <img src="<%= hotel_data.image %>" class="card-img-top" alt="image_not_found">
-            <div class="card-body">
-                <p class="card-text"><%= hotel_data.description %></p>
-                <h2>₹<%= hotel_data.price %></h2>
-                <h4 class="text-muted">Location: <%= hotel_data.location %>, <%= hotel_data.country %></h4>
-                
-                <div class="d-flex justify-content-around mt-4">
-                    <a href="/index/<%= hotel_data._id %>/edit" class="btn btn-primary edit-btn ">Edit</a>
-                    <form method="POST" action="/index/<%= hotel_data._id %>?_method=DELETE">
-                        <button type="submit" class="btn btn-dark">Delete</button>
-                    </form>
-                </div>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      
+      <!-- Hotel Details Card -->
+      <div class="col-md-6 mb-4">
+        <div class="card text-center">
+          <h1><%= hotel_data.title %></h1>
+          <img src="<%= hotel_data.image %>" class="card-img-top" alt="image_not_found">
+          <div class="card-body">
+            <p class="card-text"><%= hotel_data.description %></p>
+            <h2>₹<%= hotel_data.price %></h2>
+            <h4 class="text-muted">Location: <%= hotel_data.location %>, <%= hotel_data.country %></h4>
+
+            <div class="d-flex justify-content-around mt-4">
+              <a href="/index/<%= hotel_data._id %>/edit" class="btn btn-primary edit-btn">Edit</a>
+              <form method="POST" action="/index/<%= hotel_data._id %>?_method=DELETE">
+                <button type="submit" class="btn btn-dark">Delete</button>
+              </form>
             </div>
+          </div>
         </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <div class="card p-4">
+          <h4 class="text-center mb-3">Leave Rating</h4>
+          <form action="/index/<%= hotel_data._id %>/review" method="post" novalidate class=" needs-validation">
+            <div class="form-group mb-3">
+              <label for="rating">Rating</label>
+              <input type="range" class="form-control" id="rating" name="review[rating]" min=1 max=5>
+            </div>
+            <div class="form-group mb-3">
+              <label for="comment">comment</label>
+              <textarea  class="form-control" id="comment" placeholder="Write your review" name="review[comment]" required></textarea>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
     </div>
+  </div>
+  
 </body>
