--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -9,7 +9,15 @@
         <a class="nav-link " aria-current="page" href="/">Home</a>
         <a class="nav-link" href="/index">All Hotels</a>
         <a class="nav-link" href="/index/new">New Entity</a>
-        <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+      </div>
+      <div class="navbar-nav ms-auto">
+        <%if(!currUser){%>
+        <a class="nav-link " aria-current="page" href="/signup">Signup</a>
+        <a class="nav-link" href="/login">Login</a>
+        <%}%>
+        <% if(currUser) {%>
+        <a class="nav-link" href="/logout">Logout</a>
+        <%}%>
       </div>
     </div>
   </div>
