added owner info to hotel using the user

--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -11,6 +11,9 @@
               <%= hotel_data.title %>
             </h1>
             <img src="<%= hotel_data.image %>" class="card-img-top" alt="image_not_found">
+            <p class="card-text">Owned by ~
+              <%=hotel_data.owner.username%>
+            </p>
             <div class="card-body">
               <p class="card-text">
                 <%= hotel_data.description %>
