--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -35,51 +35,79 @@
           </div>
         </div>
 
-        <div class="col-md-6 mb-4">
-          <% if(currUser){%>
-          <div class="card p-4">
-            <h4 class="text-center mb-3">Leave Rating</h4>
-            <form action="/index/<%= hotel_data._id %>/review" method="post" novalidate class=" needs-validation">
-              <div class="form-group mb-3">
-                <label for="rating">Rating</label>
-                <input type="range" class="form-control" id="rating" name="review[rating]" min=1 max=5>
-              </div>
-              <div class="form-group mb-3">
-                <label for="comment">comment</label>
-                <textarea class="form-control" id="comment" placeholder="Write your review" name="review[comment]"
-                  required></textarea>
-                <div class="invalid-feedback">please enter comment for review</div>
-              </div>
-              <div class="text-center">
-                <button type="submit" class="btn btn-success">Submit</button>
-              </div>
-            </form>
-            <hr>
-            <% } %>
-            <p><b>ALL reivews </b></p>
-            <div class="row">
-  <% for (rev of hotel_data.reviews) { %>
-    <div class="review-card col-md-5 mb-4 ms-2">
-      <div class="card h-100 shadow-sm d-flex flex-column">
-        <div class="card-header">
-          <%= rev.author.username%>
-        </div>
-        <div class="card-body flex-grow-1 d-flex flex-column">
-          <!-- Scrollable review content -->
-          <div class="review-content flex-grow-1 overflow-auto mb-3 p-2 border rounded">
-            <p class="mb-2"><%= rev.comment %></p>
-            <p><%= rev.rating %> Stars</p>
-          </div>
+    
 
-          <!-- Delete button at bottom -->
-          <form action="/index/<%= hotel_data._id %>/review/<%= rev._id %>?_method=DELETE" method="post" class="mt-auto">
-            <button class="btn btn-dark w-100">Delete</button>
-          </form>
-        </div>
+<div class="col-md-6 mb-4">
+  <% if(currUser){ %>
+  <div class="card p-4">
+    <h4 class="text-center mb-3">Leave Rating</h4>
+    <form action="/index/<%= hotel_data._id %>/review" method="post" novalidate class="needs-validation">
+      <div class="form-group mb-3">
+        <label for="rating">Rating</label>
+
+        <!-- ⭐ Star Rating Input -->
+        <fieldset class="starability-coinFlip">
+          <!-- <legend>Rate this hotel:</legend> -->
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
+
+      <div class="form-group mb-3">
+        <label for="comment">Comment</label>
+        <textarea class="form-control" id="comment" placeholder="Write your review" name="review[comment]" required></textarea>
+        <div class="invalid-feedback">Please enter a comment for your review</div>
+      </div>
+      <div class="text-center">
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+    <hr>
+    <% } %>
+
+    <p><b>ALL reviews</b></p>
+    <div class="row">
+      <% for (rev of hotel_data.reviews) { %>
+        <div class="review-card col-md-5 mb-4 ms-2">
+          <div class="card h-100 shadow-sm d-flex flex-column">
+            <div class="card-header">
+              <%= rev.author.username %>
+            </div>
+            <div class="card-body flex-grow-1 d-flex flex-column">
+              <!-- Scrollable review content -->
+              <div class="review-content flex-grow-1 overflow-auto mb-3 p-2 border rounded">
+                <p class="mb-2"><%= rev.comment %></p>
+                <p>
+                  <% for(let i = 1; i <= 5; i++) { %>
+                    <% if(i <= rev.rating) { %>
+                      ⭐
+                    <% } else { %>
+                      ☆
+                    <% } %>
+                  <% } %>
+                </p>
+              </div>
+
+              <!-- Delete button at bottom -->
+              <form action="/index/<%= hotel_data._id %>/review/<%= rev._id %>?_method=DELETE" method="post" class="mt-auto">
+                <button class="btn btn-dark w-100">Delete</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      <% } %>
     </div>
-  <% } %>
 </div>
+
 
 
 
