--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,6 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=SUSE:wght@100..800&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="/css/rating_css.css">
+
 </head>
 <body>
     <!-- ><h1>AirBnB</h1> -->
