Initial commit - cloudinary manual upload working and changed the schema of the db

--- a/views/hotel.ejs
+++ b/views/hotel.ejs
@@ -10,7 +10,7 @@
             <h1>
               <%= hotel_data.title %>
             </h1>
-            <img src="<%= hotel_data.image %>" class="card-img-top" alt="image_not_found">
+            <img src="<%= hotel_data.image.url %>" class="card-img-top" alt="image_not_found">
             <p class="card-text">Owned by ~
               <%=hotel_data.owner.username%>
             </p>
