--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
                 <%for(let listing of alllisting){%>
                     <a href="/index/<%=listing._id%>" class="card_link">
                         <div class="card col" style="width: 18rem;">
-                            <img src="<%=listing.image%>" class="card-img-top" alt="..." style="height:20rem">
+                            <img src="<%=listing.image.url%>" class="card-img-top" alt="..." style="height:20rem">
                             <div class="card-body">
                                 <b>
                                     <p class="card-text">
